# txtflar

./: .gitignore  .pre-commit-config.yaml  Pipfile  README  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  txtflar.sublime-project
.github-disabled/: python-publish.yml
.github/workflows/: codeql-analysis.yml  publish-to-github.yml  publish-to-pypi.yml  publish.yml  release.yml
rosettxta/: __init__.py  __main__.py  cli.py  rosettxta.py
tests/: test_rosettxta.py  test_txtflar.py
tests/samples/: eng-xx-doctor-who-2005-s02e04.srt  spa-es-doctor-who-s01e01.srt  spa-es-non-utf8-file.srt
txtflar/: __init__.py  txtflar.py
