[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[bdist_wheel]
universal = 1

[project]
name = "txtflar"
version = "1.1.1"
requires-python = ">=3.11"
dependencies = [
    "babelfish >= 0.6.1",
    "chardet >= 5.2.0",
    "langdetect >= 1.0.9",
    "importlib-metadata; python_version >= '3.11'"
]
readme = "README.md"
description = "TeXT file language-aware rename"
license = {file = "LICENSE"}
authors = [
  {name = "Luis López", email = "luis@cuarentaydos.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ldotlopez/ideenergy"
Issues = "https://github.com/ldotlopez/ideenergy/issues"
Repository = "https://github.com/ldotlopez/ideenergy.git"

[tool.setuptools]
packages = ["txtflar"]

[tool.black]
target-version = ['py311']

[tool.isort]
profile = "black"

[project.scripts]
txtflar = "txtflar:main"
