# https://packaging.python.org/tutorials/packaging-projects/

[metadata]
name = txtflar
version = 1.1.1
author = Luis López
author_email = luis@cuarentaydos.com
description = TeXT file language-aware rename
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ldotlopez/txtflar
project_urls =
    Bug Tracker = https://github.com/ldotlopez/txtflar/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: OS Independent

[options]
package_dir =
    txtflar = txtflar
packages = find:
python_requires = >=3.11
install_requires =
    babelfish >= 0.6.1
    chardet >= 5.2.0
    langdetect >= 1.0.9

[options.packages.find]
where =

[options.entry_points]
console_scripts =
    txtflar = txtflar.cli:main
